# qgbif

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.docker/: .env  docker-compose-qgis.yml  exec.sh  start.sh  stop.sh
.github/workflows/: ci.yml
qgbif/: __init__.py  metadata.txt  qgbif.py
qgbif/interfaces/ui/: qgbif_dialog_base.ui
qgbif/qgis_tools/: utils.py
qgbif/qgis_tools/test_tools/: conftest.py  test_runner.py
qgbif/src/: qgbif_dialog.py
qgbif/test/: test_init.py  test_qgbif_dialog.py  test_resources.py  test_translations.py
